--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ repositories {
 // In this section you declare the dependencies for your production and test code
 dependencies {
     implementation("org.json:org.json:chargebee-1.0")
+    implementation("org.apache.commons:commons-lang3:3.12.0")    
     //
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.0")
     testImplementation("org.junit.jupiter:junit-jupiter-params:5.7.0")
