--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@
 apply plugin: 'java'
 // Apply eclipse plugin to add support for Eclipse
 apply plugin: 'eclipse'
+// Apply application plugin for generating start scripts
+apply plugin: 'application'
 
 // ======================================================================
 // Java Build
@@ -28,10 +30,21 @@ repositories {
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
+    implementation("commons-cli:commons-cli:1.5.0")    
     implementation("org.json:org.json:chargebee-1.0")
     implementation("org.apache.commons:commons-lang3:3.12.0")    
     //
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.0")
     testImplementation("org.junit.jupiter:junit-jupiter-params:5.7.0")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.7.0")
+}
+
+
+// ======================================================================
+// Java Application
+// ======================================================================
+
+application {
+    mainClass = 'evmtesttool.Main'
+    applicationName = 'evmtesttool'
 }
