--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,8 @@ apply plugin: 'eclipse'
 apply plugin: 'application'
 // Stuff needed for publishing
 apply plugin: 'maven-publish'
-apply plugin: 'signing'
+apply plugin: 'io.github.gradle-nexus.publish-plugin'
+//apply plugin: 'signing'
 
 // ======================================================================
 // Java Build
@@ -78,6 +79,12 @@ task gen(type: JavaExec) {
 // Maven Central
 // ======================================================================
 
+nexusPublishing {
+    repositories {
+        sonatype()
+    }
+}
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
@@ -114,17 +121,6 @@ publishing {
                     }
                 }
             }            
-        }
-    }
-    repositories {
-        maven {
-            def snapshotsUrl = 'https://oss.sonatype.org/content/repositories/snapshots'
-            def releaseUrl = 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
-            url = version.endsWith('SNAPSHOT') ? snapshotUrl : releaseUrl
-            credentials {
-                username sonatypeUsername
-                password sonatypePassword
-            }
         }
     }
 }
