--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@
  * under the License.
  */
 
+plugins {
+    id('io.github.gradle-nexus.publish-plugin') version "1.1.0"
+}
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
 // Apply eclipse plugin to add support for Eclipse
@@ -20,8 +23,7 @@ apply plugin: 'eclipse'
 apply plugin: 'application'
 // Stuff needed for publishing
 apply plugin: 'maven-publish'
-apply plugin: 'io.github.gradle-nexus.publish-plugin'
-//apply plugin: 'signing'
+apply plugin: 'signing'
 
 // ======================================================================
 // Java Build
