--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@
  */
 
 plugins {
-    id('io.github.gradle-nexus.publish-plugin') version "1.1.0"
+    id('io.github.gradle-nexus.publish-plugin') version "1.3.0"
 }
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
@@ -90,7 +90,10 @@ task gen(type: JavaExec) {
 
 nexusPublishing {
     repositories {
-        sonatype()
+        sonatype {
+            username=project.property("user")
+            password=project.property("password")
+        }
     }
 }
 
@@ -133,7 +136,6 @@ publishing {
         }
     }
 }
-
 
 signing {
     useGpgCmd()
